gcc/testsuite/rust/rustc/ui/issues/issue-11692-1.rs
fn main() {
    print!(testo!()); // { dg-error "" "" { target *-*-* } }
}

